--- a/accessibility/fix-a11y/04-index.html
+++ b/accessibility/fix-a11y/04-index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta charset="UTF-8" />
-    <title></title>
+    <title>Homepage - A fake website</title>
     <!-- <style>
       body {
         color: #a6a5a5;
@@ -16,7 +16,7 @@
       <div>
         <div>
           <div>
-            <a href="#"><img src="img/logo.png" /></a>
+            <a href="#"><img src="img/logo.png" alt="Name of the logo" /></a>
           </div>
           <div class="nav">
             <div>
@@ -41,7 +41,7 @@
             <div>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</div>
             <a class="primary-btn" href="#">discover now</a>
           </div>
-          <div class="col-6"><img class="img-fluid" src="hero-img.png" /></div>
+          <div class="col-6"><img class="img-fluid" src="hero-img.png" alt="" /></div>
         </div>
       </div>
     </div>
