--- a/accessibility/fix-a11y/06-index.html
+++ b/accessibility/fix-a11y/06-index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta charset="UTF-8" />
-    <title></title>
+    <title>Homepage - A fake website</title>
     <!-- <style>
       body {
         color: #a6a5a5;
@@ -16,7 +16,7 @@
       <div>
         <div>
           <div>
-            <a href="#"><img src="img/logo.png" /></a>
+            <a href="#"><img src="img/logo.png" alt="Name of the logo" /></a>
           </div>
           <div class="nav">
             <div>
@@ -41,7 +41,7 @@
             <div>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</div>
             <a class="primary-btn" href="#">discover now</a>
           </div>
-          <div class="col-6"><img class="img-fluid" src="hero-img.png" /></div>
+          <div class="col-6"><img class="img-fluid" src="hero-img.png" alt="" /></div>
         </div>
       </div>
     </div>
@@ -168,8 +168,9 @@
               <p>Stay updated with our latest trends</p>
               <form action="#" method="post">
                 <div class="input-group">
-                  <input class="form-control" type="text" name="email" placeholder="Enter Email Address" />
-                  <div class="input-group-btn"><a class="btn" type="submit">Validate</a></div>
+                  <label class="visually-hidden" for="email"></label>
+                  <input id="email" class="form-control" type="email" name="email" autocomplete="email" required aria-required="true" />
+                  <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
             </div>
@@ -179,7 +180,7 @@
               <h4>Follow Me</h4>
               <p>Let us be social</p>
               <div>
-                <a href="#"><i class="facebook-icon"></i></a><a href="#"><i class="twitter-icon"></i></a>
+                <a href="#" aria-label="Facebook"><i class="facebook-icon"></i></a><a href="#" aria-label="Twitter"><i class="twitter-icon"></i></a>
               </div>
             </div>
           </div>
